--- a/q/symb.html
+++ b/q/symb.html
@@ -209,6 +209,29 @@ need operations of ${\mathbb Q}(e).$ So we can write the functions
 recursively, where the lowest case will be the familiar rational
 operations. 
 
+<p>
+<b>EXERCISE:</b>&nbsp;Write four functions
+called <font size="+1" color="red"><code>add</code></font>, <font size="+1" color="red"><code>subtract</code></font>, <font size="+1" color="red"><code>multiply</code></font>
+and <font size="+1" color="red"><code>divide</code></font> that will perform these operations
+exactly over fields of the
+form ${\mathbb Q}(\alpha_1,...,\alpha_k),$ where
+each $\alpha_i$ is transcental
+over ${\mathbb Q}(\alpha_1,...,\alpha_{i-1}).$ In
+particular, $\alpha_1$ is transcental over ${\mathbb Q}.$ Here
+is how the <font size="+1" color="red"><code>add</code></font> function should be declared:
+<pre>
+add = function(a, b, level) {
+  ...
+}
+</pre>
+The <font size="+1" color="red"><code>level</code></font> argument denotes the number of transcental
+elements adjoined, <i>i.e.</i>, $k$
+in ${\mathbb Q}(\alpha_1,...,\alpha_k).$ The functions should be
+written recursively, <i>i.e.</i>, <font size="+1" color="red"><code>add</code></font> with level $k$
+may call the functions with level $k-1.$
+<img src="../image/box.png"></p>
+
+
 <h2><a
 name="Numbers like $\sqrt2$ etc">Numbers like $\sqrt2$ etc</a></h2>
 Here again we can proceed as above. But this will not lead to
