--- a/vid/index.html
+++ b/vid/index.html
@@ -91,9 +91,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 </li>
 </ul>
 <hr/>
+<table width="100%">
+<tr>
+<td align="right"><i>Last
+updated on:
+SAT SEP 11 IST 2021</i></td>
+</tr>
+</table>
+
 <h1><a
 name="The video production system">The video production system</a></h1>
-Download the <a href="">bundle</a>, and uncompress it. It
+Download the <a href="https://drive.google.com/file/d/17zTa77Eh_Xi88PGNNPI7bNXzOCpj1Hb1/view?usp=sharing">bundle from here</a>, and uncompress it. It
 will create a folder structure like this:
 <pre>
 vidbase (root folder)
@@ -101,8 +109,6 @@ vidbase (root folder)
   +---fromapp
   |
   +---test (a sample video folder)
-  |
-  +---fromapp 
   |
   +---Melter.java
   |
@@ -156,7 +162,7 @@ folder, you need to check the path that you entered just now.
 
 <p></p>
 Leave this window open for the time being. Let us understand the
-architecture.
+project architecture.
 
 <h2><a
 name="Understanding the folder structure">Understanding the folder structure</a></h2>
@@ -240,7 +246,8 @@ etc.
 <p></p>
 I have provided the <font color="#0000ff">video folder</font> <font size="+1" color="red"><code>test</code></font>
 in this state, so that you do not have make the images to test
-out the software.
+out the software. However, I have also populated
+the <font size="+1" color="red"><code>fromcamera</code></font> folder with the raw videos from my mobile.
 </li>
 
 <li>
