--- a/vid/index.html
+++ b/vid/index.html
@@ -101,7 +101,7 @@ SAT SEP 11 IST 2021</i></td>
 
 <h1><a
 name="The video production system">The video production system</a></h1>
-Download the <a href="https://drive.google.com/file/d/17zTa77Eh_Xi88PGNNPI7bNXzOCpj1Hb1/view?usp=sharing">bundle from here</a>, and uncompress it. It
+Download the <a href="https://drive.google.com/file/d/1evOYEtx1sWj5kaK1sC58Bv0s1IpxSy-i/view?usp=sharing">bundle from here</a>, and uncompress it. It
 will create a folder structure like this:
 <pre>
 vidbase (root folder)
@@ -123,6 +123,8 @@ vidbase (root folder)
   +---sync.png
   |
   +---transparent.png
+  |
+  +---sep.png
 </pre>
 
 Open the <font size="+1" color="red"><code>Global.java</code></font> file with an editor. You'll
@@ -132,7 +134,7 @@ final private String
     base = "<font color="#ff0000">/home/cssc/na/s/othernotes/androtalks</font>"; //Change this folder.
 
 </pre>
-Change the red part with the path of the
+Replace the red part with the path of the
 folder <font size="+1" color="red"><code>vidbase</code></font>. For example, if you have put
 your <font size="+1" color="red"><code>vidbase</code></font> folder in <font size="+1" color="red"><code>c:\users\sosu</code></font>,
 then you should have:
