--- a/pgdas/forum.html
+++ b/pgdas/forum.html
@@ -15,7 +15,7 @@ anonymous comments will be  moderated.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = "www.isical.ac.in/~pgdas/forum.html"; // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://www.isical.ac.in/~pgdas/forum.html"; // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "pgdas"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
