--- a/pgdas/b1full.html
+++ b/pgdas/b1full.html
@@ -210,7 +210,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <a href="#Exercises M2L3B">Exercises M2L3B</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Lesson 2, Video 1: Tabular">Lesson 2, Video 1: Tabular</a>
+<a href="#Lesson 2, Video 1: Tabular: Pivot table">Lesson 2, Video 1: Tabular: Pivot table</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a>
@@ -1507,7 +1507,24 @@ given frequency distribution table.<img src="../image/box.png"></p>
 
 
 <h2><a
-name="Lesson 2, Video 1: Tabular">Lesson 2, Video 1: Tabular</a></h2>
+name="Lesson 2, Video 1: Tabular: Pivot table">Lesson 2, Video 1: Tabular: Pivot table</a></h2>
+In this video we shall talk about a representation of data that
+is definitely the one most commonly used: tabular
+format. Be it a telephone directory or a dictionary or a
+railway timetable, tables are everywhere around us. Even when we
+use a computer to look up information, the underlying data base
+is basically a collection of tables. 
+<p></p>
+A table, as we all know, presents data in a rectangular
+format. Well, we have already used them earlier in this course,
+where columns represent variables and row represent cases. Those
+tables were meant primarily to be fed into a computer
+program. But human-readbale tables can be (and should be) more
+varied. They allow for various embellishments, <b>nested rows</b>,
+<b>nested columns</b>, <b>marginal summaries</b> <b>etc</b>.
+Such fancy tables are often called <b>pivot tables</b>.
+<p></p>
+Let's start with an example.
 
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
