--- a/pgdas/da5full.html
+++ b/pgdas/da5full.html
@@ -67,6 +67,47 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
       }
     }
   });
+</script>
+<style>
+body {
+  margin: 0;
+}
+
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #555;
+  color: #f1f1f1;
+}
+</style>
+<script>
+window.onscroll = function() {myFunction()};
+window.onload = function() {myInit()};
+
+var header, tphldr;
+function myInit() {
+  header = document.getElementsByClassName("header");
+  tphldr = document.getElementById("topholder");
+}
+
+function myFunction() {
+  var index = -1
+  for(i=0;i<header.length;i++) {
+    if (window.pageYOffset > header[i].offsetTop) {
+       index = i
+    }
+    else {
+       break
+    }
+  }
+
+  if(index < 0) 
+    tphldr.innerHTML = "";
+  else
+    tphldr.innerHTML = header[index].innerHTML
+}
 </script><script type="text/javascript" src="https://www.isical.ac.in/~arnabc/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script type="text/javascript" src="../MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script><script src="../tools/htmlwidgets.js"></script>
 <link href="../tools/rgl.css" rel="stylesheet"></link>
 <script src="../tools/rglClass.src.js"></script>
@@ -74,6 +115,7 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <script src="../tools/rglWebGL.js"></script>
 </head>
 <body>
+<div class="sticky" id="topholder"> </div>
 <a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Table of contents</h3>
 <ul>
@@ -282,238 +324,370 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
 <hr/>
 <title>Course: Data Analysis 5</title>
 
+<div class="header">
 <h1><a
 name="Module 1: Visual Representation">Module 1: Visual Representation</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Why multivariate data visualisation is difficult">Lesson 1, Video 1: Why multivariate data visualisation is difficult</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: Chernoff faces">Lesson 1, Video 2: Chernoff faces</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Scatter plots: pairs, 3D">Lesson 2, Video 1: Scatter plots: pairs, 3D</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Interactive scatter plots">Lesson 3, Video 1: Interactive scatter plots</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Lab">Lesson 3, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: Paralel coordinates">Lesson 4, Video 1: Paralel coordinates</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: Lab">Lesson 4, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
+<div class="header">
 <h1><a
 name="Module 2: Dimension">Module 2: Dimension</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Different types of multivariate data">Lesson 1, Video 1: Different types of multivariate data</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: The camera problem">Lesson 1, Video 2: The camera problem</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Extrinsic vs intrinsic">Lesson 2, Video 1: Extrinsic vs intrinsic</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Curse of dimensionality">Lesson 3, Video 1: Curse of dimensionality</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Dimension reduction">Lesson 3, Video 2: Dimension reduction</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: ???">Lesson 4, Video 1: ???</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: ???">Lesson 4, Video 2: ???</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
+<div class="header">
 <h1><a
 name="Module 3: PCA">Module 3: PCA</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Concept through examples">Lesson 1, Video 1: Concept through examples</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: Formulation with animation">Lesson 1, Video 2: Formulation with animation</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Hands on visualisation">Lesson 2, Video 1: Hands on visualisation</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Terminology">Lesson 3, Video 1: Terminology</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Lab">Lesson 3, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: Using R">Lesson 4, Video 1: Using R</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: Lab">Lesson 4, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
+<div class="header">
 <h1><a
 name="Module 4: Factor Analysis">Module 4: Factor Analysis</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Concept through example">Lesson 1, Video 1: Concept through example</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: Formulation">Lesson 1, Video 2: Formulation</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Terms and R">Lesson 2, Video 1: Terms and R</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Rotation">Lesson 3, Video 1: Rotation</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Lab">Lesson 3, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: Use 1: Likart">Lesson 4, Video 1: Use 1: Likart</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: Use 2: Educational testing">Lesson 4, Video 2: Use 2: Educational testing</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
+<div class="header">
 <h1><a
 name="Module 5: Multidimensional scaling">Module 5: Multidimensional scaling</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Motivation using road map">Lesson 1, Video 1: Motivation using road map</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: Real data example">Lesson 1, Video 2: Real data example</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Metric MDS">Lesson 2, Video 1: Metric MDS</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Nonmetric MDS">Lesson 3, Video 1: Nonmetric MDS</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Lab">Lesson 3, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: Stress and nonuniqueness">Lesson 4, Video 1: Stress and nonuniqueness</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: Lab">Lesson 4, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
+<div class="header">
 <h1><a
 name="Module 6: Correspondence analysis">Module 6: Correspondence analysis</a></h1>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 1: Motivation using students and subjects">Lesson 1, Video 1: Motivation using students and subjects</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 1, Video 2: Real data example">Lesson 1, Video 2: Real data example</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 1: Chi-square decomposition">Lesson 2, Video 1: Chi-square decomposition</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 2, Video 2: Lab">Lesson 2, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 1: Biplot">Lesson 3, Video 1: Biplot</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 3, Video 2: Lab">Lesson 3, Video 2: Lab</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 1: ???">Lesson 4, Video 1: ???</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 4, Video 2: ???">Lesson 4, Video 2: ???</a></h2>
+</div>
 
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 1: Review">Lesson 5 , Video 1: Review</a></h2>
+</div>
 
+<div class="header">
 <h2><a
 name="Lesson 5 , Video 2: Review">Lesson 5 , Video 2: Review</a></h2>
+</div>
 
 
 
