--- a/pgdas/b1full.html
+++ b/pgdas/b1full.html
@@ -329,7 +329,7 @@ series, panel and spatial</a>
 </li>
 </ul>
 <hr/>
-<title>Course: Basic 1: Descriptive Statistics</title>
+<title>Course: Basic 1: Basic Statistics</title>
 This course consists of 6 modules,  each spanning one week. Each
 module is made of 5 lessons,  which in their turn are split into
 2 (or in some cases 3) videos. Each of the first 4 lessons in a
