--- a/vm2_2022/svd.html
+++ b/vm2_2022/svd.html
@@ -1,132 +1,132 @@
 <html><body>
 
-<img src="svd1.png">
+<img src="image/svd1.png">
 <hr/>
 
-<img src="svd2.png">
+<img src="image/svd2.png">
 <hr/>
 
-<img src="svd3.png">
+<img src="image/svd3.png">
 <hr/>
 
-<img src="svd4.png">
+<img src="image/svd4.png">
 <hr/>
 
-<img src="svd5.png">
+<img src="image/svd5.png">
 <hr/>
 
-<img src="svd6.png">
+<img src="image/svd6.png">
 <hr/>
 
-<img src="svd7.png">
+<img src="image/svd7.png">
 <hr/>
 
-<img src="svd8.png">
+<img src="image/svd8.png">
 <hr/>
 
-<img src="svd9.png">
+<img src="image/svd9.png">
 <hr/>
 
-<img src="svd10.png">
+<img src="image/svd10.png">
 <hr/>
 
-<img src="svd11.png">
+<img src="image/svd11.png">
 <hr/>
 
-<img src="svd12.png">
+<img src="image/svd12.png">
 <hr/>
 
-<img src="svd13.png">
+<img src="image/svd13.png">
 <hr/>
 
-<img src="svd14.png">
+<img src="image/svd14.png">
 <hr/>
 
-<img src="svd15.png">
+<img src="image/svd15.png">
 <hr/>
 
-<img src="svd16.png">
+<img src="image/svd16.png">
 <hr/>
 
-<img src="svd17.png">
+<img src="image/svd17.png">
 <hr/>
 
-<img src="svd18.png">
+<img src="image/svd18.png">
 <hr/>
 
-<img src="svd19.png">
+<img src="image/svd19.png">
 <hr/>
 
-<img src="svd20.png">
+<img src="image/svd20.png">
 <hr/>
 
-<img src="svd21.png">
+<img src="image/svd21.png">
 <hr/>
 
-<img src="svd22.png">
+<img src="image/svd22.png">
 <hr/>
 
-<img src="svd23.png">
+<img src="image/svd23.png">
 <hr/>
 
-<img src="svd24.png">
+<img src="image/svd24.png">
 <hr/>
 
-<img src="svd25.png">
+<img src="image/svd25.png">
 <hr/>
 
-<img src="svd26.png">
+<img src="image/svd26.png">
 <hr/>
 
-<img src="svd27.png">
+<img src="image/svd27.png">
 <hr/>
 
-<img src="svd28.png">
+<img src="image/svd28.png">
 <hr/>
 
-<img src="svd29.png">
+<img src="image/svd29.png">
 <hr/>
 
-<img src="svd30.png">
+<img src="image/svd30.png">
 <hr/>
 
-<img src="svd31.png">
+<img src="image/svd31.png">
 <hr/>
 
-<img src="svd32.png">
+<img src="image/svd32.png">
 <hr/>
 
-<img src="svd33.png">
+<img src="image/svd33.png">
 <hr/>
 
-<img src="svd34.png">
+<img src="image/svd34.png">
 <hr/>
 
-<img src="svd35.png">
+<img src="image/svd35.png">
 <hr/>
 
-<img src="svd36.png">
+<img src="image/svd36.png">
 <hr/>
 
-<img src="svd37.png">
+<img src="image/svd37.png">
 <hr/>
 
-<img src="svd38.png">
+<img src="image/svd38.png">
 <hr/>
 
-<img src="svd39.png">
+<img src="image/svd39.png">
 <hr/>
 
-<img src="svd40.png">
+<img src="image/svd40.png">
 <hr/>
 
-<img src="svd41.png">
+<img src="image/svd41.png">
 <hr/>
 
-<img src="svd42.png">
+<img src="image/svd42.png">
 <hr/>
 
-<img src="svd43.png">
+<img src="image/svd43.png">
 <hr/>
 
 </body></html>
