--- a/vm2_2022/exreigen.html
+++ b/vm2_2022/exreigen.html
@@ -1,56 +1,56 @@
 <html><body>
 <h1>Eigenvalues problems from Steven Leon</h1>
-<img src="exreigen1.png">
-<img src="exreigen2.png">
-<img src="exreigen3.png">
-<img src="exreigen4.png">
-<img src="exreigen5.png">
-<img src="exreigen6.png">
-<img src="exreigen7.png">
-<img src="exreigen8.png">
-<img src="exreigen9.png">
-<img src="exreigen10.png">
-<img src="exreigen11.png">
-<img src="exreigen12.png">
-<img src="exreigen13.png">
-<img src="exreigen14.png">
-<img src="exreigen15.png">
-<img src="exreigen16.png">
-<img src="exreigen17.png">
-<img src="exreigen18.png">
-<img src="exreigen19.png">
-<img src="exreigen20.png">
-<img src="exreigen21.png">
-<img src="exreigen22.png">
-<img src="exreigen23.png">
-<img src="exreigen24.png">
-<img src="exreigen25.png">
-<img src="exreigen26.png">
-<img src="exreigen27.png">
-<img src="exreigen28.png">
-<img src="exreigen29.png">
-<img src="exreigen30.png">
-<img src="exreigen31.png">
-<img src="exreigen32.png">
-<img src="exreigen33.png">
-<img src="exreigen34.png">
-<img src="exreigen35.png">
-<img src="exreigen36.png">
-<img src="exreigen37.png">
-<img src="exreigen38.png">
-<img src="exreigen39.png">
-<img src="exreigen40.png">
-<img src="exreigen41.png">
-<img src="exreigen42.png">
-<img src="exreigen43.png">
-<img src="exreigen44.png">
-<img src="exreigen45.png">
-<img src="exreigen46.png">
-<img src="exreigen47.png">
-<img src="exreigen48.png">
-<img src="exreigen49.png">
-<img src="exreigen50.png">
-<img src="exreigen51.png">
-<img src="exreigen52.png">
-<img src="exreigen53.png">
+<img src="image/exreigen1.png">
+<img src="image/exreigen2.png">
+<img src="image/exreigen3.png">
+<img src="image/exreigen4.png">
+<img src="image/exreigen5.png">
+<img src="image/exreigen6.png">
+<img src="image/exreigen7.png">
+<img src="image/exreigen8.png">
+<img src="image/exreigen9.png">
+<img src="image/exreigen10.png">
+<img src="image/exreigen11.png">
+<img src="image/exreigen12.png">
+<img src="image/exreigen13.png">
+<img src="image/exreigen14.png">
+<img src="image/exreigen15.png">
+<img src="image/exreigen16.png">
+<img src="image/exreigen17.png">
+<img src="image/exreigen18.png">
+<img src="image/exreigen19.png">
+<img src="image/exreigen20.png">
+<img src="image/exreigen21.png">
+<img src="image/exreigen22.png">
+<img src="image/exreigen23.png">
+<img src="image/exreigen24.png">
+<img src="image/exreigen25.png">
+<img src="image/exreigen26.png">
+<img src="image/exreigen27.png">
+<img src="image/exreigen28.png">
+<img src="image/exreigen29.png">
+<img src="image/exreigen30.png">
+<img src="image/exreigen31.png">
+<img src="image/exreigen32.png">
+<img src="image/exreigen33.png">
+<img src="image/exreigen34.png">
+<img src="image/exreigen35.png">
+<img src="image/exreigen36.png">
+<img src="image/exreigen37.png">
+<img src="image/exreigen38.png">
+<img src="image/exreigen39.png">
+<img src="image/exreigen40.png">
+<img src="image/exreigen41.png">
+<img src="image/exreigen42.png">
+<img src="image/exreigen43.png">
+<img src="image/exreigen44.png">
+<img src="image/exreigen45.png">
+<img src="image/exreigen46.png">
+<img src="image/exreigen47.png">
+<img src="image/exreigen48.png">
+<img src="image/exreigen49.png">
+<img src="image/exreigen50.png">
+<img src="image/exreigen51.png">
+<img src="image/exreigen52.png">
+<img src="image/exreigen53.png">
 </body></html>
