--- a/lm2022/index.html
+++ b/lm2022/index.html
@@ -137,6 +137,42 @@ function myFunction() {
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Video lectures and exercises">Video lectures and exercises</a>
 </li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Intro">Intro</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Deeper">Deeper</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Gauss-Markov set up">Gauss-Markov set up</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Common cases">Common cases</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Looking at residuals">Looking at residuals</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Test of hypotheses">Test of hypotheses</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Multiple hypotheses testing">Multiple hypotheses testing</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Departure 1 from GM: covariance structure">Departure 1 from GM: covariance structure</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Departure 2 from GM: influential points">Departure 2 from GM: influential points</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Departure 3 from GM: multicollinearity">Departure 3 from GM: multicollinearity</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Linear mixed effects model in R">Linear mixed effects model in R</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="#Generalised linear models">Generalised linear models</a>
+</li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Class notes">Class notes</a>
 </li>
@@ -153,14 +189,14 @@ function myFunction() {
 <tr>
 <td align="right"><i>Last
 updated on:
-SAT JUN 04 IST 2022</i></td>
+SAT JUN 11 IST 2022</i></td>
 </tr>
 </table>
 
 <h1><a
 name="Linear Statistical Models">Linear Statistical Models</a></h1>
 This is the webpage for the Linear Models course (B. Stat. (hons)
-III, 2020).
+III, 2022).
 <p></p>
 
 <table align="right" width="50%">
@@ -180,6 +216,9 @@ III, 2020).
 
 <h2><a
 name="Video lectures and exercises">Video lectures and exercises</a></h2>
+
+<h3><a
+name="Intro">Intro</a></h3>
 
 <ul>
 
@@ -203,18 +242,28 @@ workflow using faraway package.</li>
 Terminology: factor, covariate, ANOVA, regression, ANCOVA, 
            treatment, control, random error</li>
 
+
+<h3><a
+name="Deeper">Deeper</a></h3>
+
 <li>
 <a href="https://youtu.be/fzRywERTg4o">Lecture 5</a>: A
 complete example from set up to analysis using R: springs.</li>
 
 <li>
-<a href="https://youtu.be/-phZYb_zrIQ">Lecture 6</a>
+<a href="https://youtu.be/-phZYb_zrIQ">Lecture
+6</a>(10:05): Quadratic regression using R
 </li>
 
 <li>
 <a href="https://youtu.be/k1vq2NU6k28">Lecture 7</a>:
 Constructing a model from a description. Details of a blackbox with two inputs (spring example). data
 layout, subscripting. model. R lab.</li>
+
+
+<h3><a
+name="Gauss-Markov set up">Gauss-Markov set up</a></h3>
+
 
 <li>
 <a href="https://youtu.be/GTkVNDJQQ-8">Lecture 8</a>:
@@ -233,6 +282,11 @@ from assumptions.</li>
 <li>
 <a href="https://youtu.be/Yc-EEOYnaPU">Lecture 11</a>
 (24:02): Estimating error variance</li>
+
+
+<h3><a
+name="Common cases">Common cases</a></h3>
+
 
 <li>
 <a href="https://youtu.be/xaJj2TRj1LY">Lecture 12</a>
@@ -260,10 +314,20 @@ randomisation, design of experiments</li>
 <img src="image/alert.png"><a href="ex1.html">Exercise set 1</a>
 </li>
 
+
+<h3><a
+name="Looking at residuals">Looking at residuals</a></h3>
+
+
 <li>
 <a href="https://youtu.be/gnLNb_iqi9o">Lecture 17</a>
 (32:26): Goodness of fit, residuals, RSS, R-squared, , R-squared
 (adj) </li>
+
+
+<h3><a
+name="Test of hypotheses">Test of hypotheses</a></h3>
+
 
 <li>
 <a href="https://youtu.be/WfYiBkd4onE">Lecture 18</a>
@@ -290,6 +354,11 @@ subspace of column space, pictorial representation of test</li>
 <a href="https://youtu.be/5x1s3ruRARk">Lecture 23</a>
 (36:31): 1-way ANOVA identity, orthogonal split up of SS.</li>
 
+
+<h3><a
+name="Multiple hypotheses testing">Multiple hypotheses testing</a></h3>
+
+
 <li>
 <a href="https://youtu.be/Tm3ROwspy_A">Lecture 24</a> (25:48):
 Multiple hypotheses testing (part 1) FDR, Bonferroni, Fisher LSD.</li>
@@ -310,6 +379,11 @@ Model selection, AIC, BIC</li>
 <a href="https://youtu.be/YRzxQQQ1s-c">Lecture 27</a> (11:45):
 Multiple hypotheses testing (part 3): using R</li>
 
+
+<h3><a
+name="Departure 1 from GM: covariance structure">Departure 1 from GM: covariance structure</a></h3>
+
+
 <li>
 <a href="https://youtu.be/mT5qxWbIgn0">Lecture 28</a>(missing): 
 Covariance structures (part 1)</li>
@@ -322,9 +396,15 @@ Covariance structures (part 1)</li>
 <a href="https://youtu.be/1FFaShGKK3M">Lecture 30</a>(17:29): 
 Covariance structures (part 3): Using R</li>
 
+
+<h3><a
+name="Departure 2 from GM: influential points">Departure 2 from GM: influential points</a></h3>
+
+
 <li>
-<a href="https://youtu.be/QoOF8vdUFCo">Lecture 31</a>:
-Influence diagnostics (part 1)</li>
+<a href="https://youtu.be/QoOF8vdUFCo">Lecture 31</a>(17:17):
+Influence diagnostics (part 1), influential, leverage, DFBETA,
+DFFIT etc.</li>
 
 <li>
 <a href="bkw20_52.pdf">Some reference
@@ -332,63 +412,96 @@ material from Belsley, Kuh and Welsch</a>
 </li>
 
 <li>
-<a href="https://youtu.be/t6DlcCz4V2I">Lecture 32</a>:
-Influence diagnostics (part 2)</li>
+<a href="https://youtu.be/t6DlcCz4V2I">Lecture 32</a>(21:06):
+Influence diagnostics (part 2) What to do with influential
+points, R session, Cook's distance</li>
+
+
+<h3><a
+name="Departure 3 from GM: multicollinearity">Departure 3 from GM: multicollinearity</a></h3>
+
 
 <li>
-<a href="https://youtu.be/07mlgpBsbWw">Lecture 33</a>:
-Multicollinearity (part 1)</li>
+<a href="https://youtu.be/07mlgpBsbWw">Lecture 33</a>(13:46):
+Multicollinearity (part 1), VIF, subset selection, ridge.</li>
 
 <li>
-<a href="https://youtu.be/qpMFcxcbG4Y">Lecture 34</a>:
-Multicollinearity (part 2)</li>
+<a href="https://youtu.be/qpMFcxcbG4Y">Lecture 34</a>(14:20):
+Multicollinearity (part 2), ridge as bayes, ridge as soft bound,
+ridge as hard bound, Lasso.</li>
 
 <li>A short discussion about different formuations of
 <a href="ridge.html">ridge regression</a>.</li>
 
 <li>
-<a href="https://youtu.be/M8jBna_VVKo">Lecture 35</a>:
-Multicollinearity in R: Ridge regression</li>
+<a href="https://youtu.be/M8jBna_VVKo">Lecture 35</a>(10:50):
+Ridge regression in R.</li>
 
 <li>
-<a href="https://youtu.be/WXaGLAZ-MQE">Lecture 36</a>:
-Multicollinearity in R: Lasso and subset selection</li>
+<a href="https://youtu.be/WXaGLAZ-MQE">Lecture 36</a>(16:05):
+Lasso and subset selection in R</li>
+
+
+<h3><a
+name="Linear mixed effects model in R">Linear mixed effects model in R</a></h3>
 
 <li>
-<a href="https://youtu.be/XtTuMtMzXzk">Lecture 37</a>: Linear mixed effects models (part 1)</li>
+<a href="https://youtu.be/XtTuMtMzXzk">Lecture
+37</a>(13:01): 
+Linear mixed effects models (part 1), motivation. </li>
 
 <li>
-<a href="https://youtu.be/yT7tkG3Zyis">Lecture 38</a>: Linear mixed effects models (part 2)</li>
+<a href="https://youtu.be/yT7tkG3Zyis">Lecture 38</a>(16:07): 
+Linear mixed effects models (part 2), math formulation, real
+life example, comparison with paired-t test</li>
 
 <li>
-<a href="https://youtu.be/H81FsYMkZ2g">Lecture 39</a>: Linear mixed effects models (part 3)
+<a href="https://youtu.be/H81FsYMkZ2g">Lecture 39</a>(16:38):
+ Linear mixed effects models (part 3), test of significance,
+ bootstrapping, BLUP, Henderson's equations
 Here is <a href="blup.pdf">the paper mentioned in the video</a>.</li>
 
 <li>
-<a href="https://youtu.be/zJD2bNuMP4A">Lecture 40</a>:
-Mixed effects models in R (part 1)</li>
+<a href="https://youtu.be/zJD2bNuMP4A">Lecture 40</a>(16:39):
+Mixed effects models in R (part 1), concept of grouped data,
+"factoring" trick</li>
 
 <li>
-<a href="https://youtu.be/z201b9qBadM">Lecture 41</a>:
-Mixed effects models in R (part 2)</li>
+<a href="https://youtu.be/z201b9qBadM">Lecture 41</a>(18:18):
+Mixed effects models in R (part 2), lme from nlme, tablet
+example, parametric bootstrap. </li>
 
 <li>
-<a href="https://youtu.be/UupGKE6QDRw">Lecture 42</a>:
-Linear mixed effects models (part 4)</li>
+<a href="https://youtu.be/UupGKE6QDRw">Lecture 42</a>(19:38):
+Linear mixed effects models (part 4), three mixed models that are
+not of grouped data type: same effect both fixed and random,
+main effect fixed but interaction random, multilevel model</li>
 
 <li>
 <img src="image/alert.png"><a href="ex4.html">Exercise set 4</a>
 </li>
 
-<li>
-<a href="https://youtu.be/-01r7JKfQWE">Lecture 43</a>: Generalized linear models (part 1)</li>
+
+<h3><a
+name="Generalised linear models">Generalised linear models</a></h3>
 
 <li>
-<a href="https://youtu.be/u1UY1NuSpzc">Lecture 44</a>: Generalized linear models (part 2)</li>
+<a href="">glm1</a>(): The probit problem</li>
 
 <li>
-<a href="https://youtu.be/ZzhsuDR0eGc">Lecture 45</a>: Generalized linear models
-(part 3): Using R</li>
+<a href="">glm2</a>(): The probit solution</li>
+
+<li>
+<a href="">glm3</a>(): Social impact</li>
+
+<li>
+<a href="">glm4</a>(): R lab</li>
+
+<li>
+<a href="">glm5</a>(): Math formulation, logistic regression (advanced)</li>
+
+<li>
+<a href="">glm6</a>(): R lab (advanced)</li>
 
 </ul>
 
